--- a/index.html
+++ b/index.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <meta property="og:title" content="Bedrock Cosmos Launcher" />
-    <meta name="description" content="Bedrock Cosmos Launcher – Custom capes, Legacy Skin Packs, and more for Minecraft Bedrock Edition." />
-    <meta property="og:description" content="Bedrock Cosmos Launcher – Custom capes, Legacy Skin Packs, and more for Minecraft Bedrock Edition." />
-    <meta property="twitter:description" content="Bedrock Cosmos Launcher – Custom capes, Legacy Skin Packs, and more for Minecraft Bedrock Edition." />
-    <meta property="theme-color" content="#2aa7a7" />
-    <meta name="twitter:card" content="summary_large_image" />
+  <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta
-      name="twitter:image"
-      content="https://raw.githubusercontent.com/Bedrock-Cosmos/Backend/main/Main/Thumbnails/Marketplace/Skin%20Packs/Minecraft%20Restored/1st%20Birthday%20Skin%20Pack%20Restored/1stBirthdayRestored_thumbnail.jpg"
+      name="description"
+      content="Bedrock Cosmos – Custom capes, Legacy Skin Packs, and more for Minecraft Bedrock Edition."
     />
+    <meta name="keywords" content="Minecraft, Bedrock, Marketplace, Launcher, Proxy" />
+    <link rel="canonical" href="https://bedrock-cosmos.app" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bedrock Cosmos - Launcher" />
     <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/Bedrock-Cosmos/Backend/main/Main/Thumbnails/Marketplace/Skin%20Packs/Minecraft%20Restored/1st%20Birthday%20Skin%20Pack%20Restored/1stBirthdayRestored_thumbnail.jpg"
+      property="og:description"
+      content="Bedrock Cosmos – Custom capes, Legacy Skin Packs, and more for Minecraft Bedrock Edition."
     />
-    <meta property="og:image:width" content="800" />
-    <meta property="og:image:height" content="450" />
+    <meta property="og:url" content="https://bedrock-cosmos.app" />
+    <meta property="og:image" content="https://bedrock-cosmos.app/icons/icon.png" />
+    <meta property="og:image:width" content="256" />
+    <meta property="og:image:height" content="256" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Bedrock Cosmos - Launcher" />
+    <meta
+      name="twitter:description"
+      content="Bedrock Cosmos – Custom capes, Legacy Skin Packs, and more for Minecraft Bedrock Edition."
+    />
+    <meta name="twitter:image" content="https://bedrock-cosmos.app/icons/icon.png" />
+
+    <meta name="theme-color" content="#010101" />
+
     <meta name="keywords" content="Minecraft, Bedrock, Marketplace, Launcher, Proxy" />
     <link rel="canonical" href="https://bedrock-cosmos.app" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
-    <title>Bedrock Cosmos Launcher</title>
+    <title>Bedrock Cosmos - Launcher</title>
     <style>
       * {
         margin: 0;
@@ -300,10 +318,10 @@
       }
 
       .feature-icon {
-  width: 1.2em;
-  height: 1.2em;
-  display: block;
-  margin: 0 auto;
+        width: 1.2em;
+        height: 1.2em;
+        display: block;
+        margin: 0 auto;
 
         font-size: 3rem;
         margin-bottom: 1rem;
@@ -549,11 +567,7 @@
           and restores missing content.
         </p>
         <div class="hero-buttons">
-          <a
-            href="https://www.youtube.com/watch?v=RCSnBT2YOEo"
-            class="btn-primary"
-            >Download (Windows)</a
-          >
+          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo" class="btn-primary">Download (Windows)</a>
           <a href="#features" class="btn-secondary">Learn More</a>
         </div>
         <div class="stats-container">
@@ -565,22 +579,22 @@
     <section class="features" id="features">
       <div class="features-grid">
         <div class="feature-card">
-          <img src="./icons/folder.png" alt="Folder" class="feature-icon">
+          <img src="./icons/folder.png" alt="Folder" class="feature-icon" />
           <h3>Open Source</h3>
           <p>The Launcher is open source and available on Github</p>
         </div>
         <div class="feature-card">
-          <img src="./icons/like.png" alt="Like" class="feature-icon">
+          <img src="./icons/like.png" alt="Like" class="feature-icon" />
           <h3>Easy To Use</h3>
           <p>Install it in seconds and turn it on!</p>
         </div>
         <div class="feature-card">
-          <img src="./icons/link.png" alt="Link" class="feature-icon">
+          <img src="./icons/link.png" alt="Link" class="feature-icon" />
           <h3>Compatible</h3>
           <p>Works with any bedrock client installed</p>
         </div>
         <div class="feature-card">
-          <img src="./icons/resize.png" alt="Resize" class="feature-icon">
+          <img src="./icons/resize.png" alt="Resize" class="feature-icon" />
           <h3>Lightweight</h3>
           <p>Runs in the background using no resources</p>
         </div>
@@ -663,8 +677,8 @@
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
-            Yes! Bedrock Cosmos is completely open source and available on GitHub. You can review the code and build it yourself to
-            see exactly what it does.
+            Yes! Bedrock Cosmos is completely open source and available on GitHub. You can review the code and build it
+            yourself to see exactly what it does.
           </div>
         </div>
 
@@ -695,8 +709,8 @@
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
-            Yes! We provide templates and tools for you to upload your
-            own. Join our Discord server to submit your capes for use with Bedrock Cosmos.
+            Yes! We provide templates and tools for you to upload your own. Join our Discord server to submit your capes
+            for use with Bedrock Cosmos.
           </div>
         </div>
 
@@ -733,14 +747,8 @@
         </div>
         <div class="footer-section">
           <h3>Resources</h3>
-          <a
-            href="https://www.youtube.com/watch?v=RCSnBT2YOEo"
-            >Download</a
-          >
-          <a
-            href="https://www.youtube.com/watch?v=RCSnBT2YOEo"
-            >Github</a
-          >
+          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo">Download</a>
+          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo">Github</a>
         </div>
         <div class="footer-section">
           <h3>Legal</h3>
