--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         <div class="feature-card">
           <img src="./icons/resize.png" alt="Resize" class="feature-icon" />
           <h3>Lightweight</h3>
-          <p>Runs in the background using no resources</p>
+          <p>Runs in the background using very little resources</p>
         </div>
       </div>
     </section>
@@ -631,7 +631,7 @@
           <p>Access missing packs and experience content that was previously unavailable in your region or platform.</p>
         </div>
         <div class="section-image">
-          <img src="./imgs/img_2.jpg" alt="Marketplace" />
+          <img src="./imgs/img_2.png" alt="Marketplace" />
         </div>
       </div>
     </section>
@@ -689,7 +689,7 @@
           </div>
           <div class="faq-answer">
             Currently, Bedrock Cosmos is only available for Windows. It works with any Minecraft Bedrock Edition client
-            installed on Windows systems.
+            or version installed on Windows systems.
           </div>
         </div>
 
