Added Terms of Service and Privacy Policy

--- a/index.html
+++ b/index.html
@@ -35,512 +35,8 @@
     <meta name="twitter:image" content="https://bedrock-cosmos.app/icons/icon.png" />
 
     <meta name="theme-color" content="#010101" />
-
-    <meta name="keywords" content="Minecraft, Bedrock, Marketplace, Launcher, Proxy" />
-    <link rel="canonical" href="https://bedrock-cosmos.app" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
     <title>Bedrock Cosmos - Launcher</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-        background: #0a0a0a;
-        color: #fff;
-        overflow-x: hidden;
-      }
-
-      .stars-container {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        overflow: hidden;
-        pointer-events: none;
-        z-index: 1;
-      }
-
-      .star {
-        position: absolute;
-        background: white;
-        border-radius: 50%;
-        animation: twinkle 3s ease-in-out infinite;
-      }
-
-      @keyframes twinkle {
-        0%,
-        100% {
-          opacity: 0.3;
-          transform: scale(1);
-        }
-        50% {
-          opacity: 1;
-          transform: scale(1.2);
-        }
-      }
-
-      .shooting-star {
-        position: absolute;
-        width: 2px;
-        height: 2px;
-        background: white;
-        border-radius: 50%;
-        box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.8);
-        animation: shoot 3s linear infinite;
-      }
-
-      @keyframes shoot {
-        0% {
-          transform: translateX(0) translateY(0);
-          opacity: 1;
-        }
-        100% {
-          transform: translateX(-400px) translateY(400px);
-          opacity: 0;
-        }
-      }
-
-      .navbar {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        padding: 1.5rem 3rem;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        z-index: 1000;
-        background: rgba(10, 10, 10, 0.95);
-        backdrop-filter: blur(10px);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      }
-
-      .nav-links {
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        display: flex;
-        gap: 2rem;
-        list-style: none;
-      }
-
-      .logo {
-        font-size: 1.8rem;
-        font-weight: 700;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        gap: 0.8rem;
-      }
-
-      .logo-icon {
-        width: 40px;
-        height: 40px;
-        border-radius: 8px;
-      }
-
-      .nav-links a {
-        color: #ccc;
-        text-decoration: none;
-        font-weight: 500;
-        transition: color 0.3s;
-      }
-
-      .nav-links a:hover {
-        color: #fff;
-      }
-
-      .discord-btn {
-        background: #fff;
-        padding: 0.7rem 1.5rem;
-        border-radius: 8px;
-        color: #0a0a0a;
-        text-decoration: none;
-        font-weight: 600;
-        transition: all 0.3s;
-      }
-
-      .discord-btn:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 10px 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .clouds-container {
-        display: none;
-      }
-
-      .hero {
-        position: relative;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 0 2rem;
-        z-index: 10;
-        overflow: hidden;
-      }
-
-      .hero-content {
-        text-align: center;
-        max-width: 800px;
-        z-index: 10;
-      }
-
-      .hero-icon {
-        width: 120px;
-        height: 120px;
-        margin: 0 auto 2rem;
-        animation: float-icon 3s ease-in-out infinite;
-        filter: drop-shadow(0 0 30px rgba(255, 255, 255, 0.5));
-      }
-
-      @keyframes float-icon {
-        0%,
-        100% {
-          transform: translateY(0px);
-        }
-        50% {
-          transform: translateY(-20px);
-        }
-      }
-
-      .hero h1 {
-        font-size: 4rem;
-        font-weight: 800;
-        margin-bottom: 1rem;
-        color: #fff;
-        text-shadow: 0 0 40px rgba(255, 255, 255, 0.3);
-      }
-
-      .hero p {
-        font-size: 1.3rem;
-        color: #aaa;
-        margin-bottom: 2.5rem;
-        line-height: 1.6;
-      }
-
-      .hero-buttons {
-        display: flex;
-        gap: 1.5rem;
-        justify-content: center;
-        flex-wrap: wrap;
-        align-items: center;
-      }
-
-      .stats-container {
-        display: flex;
-        gap: 2rem;
-        justify-content: center;
-        margin-top: 1rem;
-        flex-wrap: wrap;
-      }
-
-      .stat-item {
-        color: #ccc;
-        font-size: 0.95rem;
-      }
-
-      .stat-number {
-        color: #fff;
-        font-weight: 700;
-      }
-
-      .btn-primary {
-        background: #fff;
-        padding: 1rem 2.5rem;
-        border-radius: 10px;
-        color: #0a0a0a;
-        text-decoration: none;
-        font-weight: 700;
-        font-size: 1.1rem;
-        transition: all 0.3s;
-        border: 2px solid #fff;
-      }
-
-      .btn-primary:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 15px 40px rgba(255, 255, 255, 0.4);
-      }
-
-      .btn-secondary {
-        background: transparent;
-        padding: 1rem 2.5rem;
-        border-radius: 10px;
-        color: #fff;
-        text-decoration: none;
-        font-weight: 700;
-        font-size: 1.1rem;
-        border: 2px solid rgba(255, 255, 255, 0.3);
-        transition: all 0.3s;
-      }
-
-      .btn-secondary:hover {
-        background: rgba(255, 255, 255, 0.1);
-        border-color: #fff;
-        transform: translateY(-3px);
-      }
-
-      .features {
-        padding: 6rem 3rem;
-        position: relative;
-        z-index: 10;
-        background: linear-gradient(180deg, #0a0a0a 0%, #1a1a1a 100%);
-      }
-
-      .features-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 2rem;
-        max-width: 1200px;
-        margin: 0 auto;
-      }
-
-      .feature-card {
-        background: rgba(255, 255, 255, 0.03);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        border-radius: 15px;
-        padding: 2rem;
-        text-align: center;
-        transition: all 0.3s;
-      }
-
-      .feature-card:hover {
-        transform: translateY(-5px);
-        background: rgba(255, 255, 255, 0.05);
-        border-color: rgba(255, 255, 255, 0.3);
-        box-shadow: 0 10px 40px rgba(255, 255, 255, 0.1);
-      }
-
-      .feature-icon {
-        width: 1.2em;
-        height: 1.2em;
-        display: block;
-        margin: 0 auto;
-
-        font-size: 3rem;
-        margin-bottom: 1rem;
-        filter: grayscale(100%) brightness(2);
-      }
-
-      .feature-card h3 {
-        font-size: 1.5rem;
-        margin-bottom: 0.8rem;
-        color: #fff;
-      }
-
-      .feature-card p {
-        color: #999;
-        line-height: 1.6;
-      }
-
-      .faq-section {
-        padding: 6rem 3rem;
-        position: relative;
-        z-index: 10;
-        background: #0a0a0a;
-      }
-
-      .faq-container {
-        max-width: 900px;
-        margin: 0 auto;
-      }
-
-      .faq-title {
-        font-size: 3rem;
-        font-weight: 800;
-        text-align: center;
-        margin-bottom: 3rem;
-        color: #fff;
-      }
-
-      .faq-item {
-        background: rgba(255, 255, 255, 0.03);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        border-radius: 12px;
-        margin-bottom: 1.5rem;
-        overflow: hidden;
-        transition: all 0.3s;
-      }
-
-      .faq-item:hover {
-        border-color: rgba(255, 255, 255, 0.2);
-      }
-
-      .faq-question {
-        padding: 1.5rem 2rem;
-        cursor: pointer;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 1.1rem;
-        font-weight: 600;
-        color: #fff;
-        user-select: none;
-      }
-
-      .faq-toggle {
-        font-size: 1.5rem;
-        transition: transform 0.3s;
-      }
-
-      .faq-item.active .faq-toggle {
-        transform: rotate(45deg);
-      }
-
-      .faq-answer {
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.3s ease, padding 0.3s ease;
-        padding: 0 2rem;
-        color: #999;
-        line-height: 1.8;
-      }
-
-      .faq-item.active .faq-answer {
-        max-height: 500px;
-        padding: 0 2rem 1.5rem 2rem;
-      }
-
-      .section {
-        padding: 6rem 3rem;
-        position: relative;
-        z-index: 10;
-        background: #0a0a0a;
-      }
-
-      .section:nth-child(even) {
-        background: #151515;
-      }
-
-      .section-content {
-        max-width: 1200px;
-        margin: 0 auto;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 4rem;
-        align-items: center;
-      }
-
-      .section:nth-child(even) .section-content {
-        direction: rtl;
-      }
-
-      .section:nth-child(even) .section-content > * {
-        direction: ltr;
-      }
-
-      .section h2 {
-        font-size: 2.5rem;
-        margin-bottom: 1.5rem;
-        color: #fff;
-      }
-
-      .section p {
-        color: #999;
-        line-height: 1.8;
-        font-size: 1.1rem;
-        margin-bottom: 1rem;
-      }
-
-      .section-image {
-        background: rgba(255, 255, 255, 0.03);
-        border: 2px solid rgba(255, 255, 255, 0.1);
-        border-radius: 20px;
-        padding: 0.1rem;
-        text-align: center;
-        min-height: auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden; /* ensures image doesn't overflow box */
-      }
-
-      .section-image img {
-        width: 100%; /* fill the width of the container */
-        height: 100%; /* fill the height of the container */
-        object-fit: contain; /* or use 'cover' if you want to fill and crop edges */
-        border-radius: 12px; /* optional: rounded corners on the image */
-        filter: brightness(1.2);
-      }
-
-      footer {
-        background: #000;
-        padding: 3rem 2rem;
-        position: relative;
-        z-index: 10;
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-      }
-
-      .footer-content {
-        max-width: 1200px;
-        margin: 0 auto;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 2rem;
-        margin-bottom: 2rem;
-      }
-
-      .footer-section h3 {
-        color: #fff;
-        font-size: 1.1rem;
-        margin-bottom: 1rem;
-        font-weight: 600;
-      }
-
-      .footer-section a {
-        display: block;
-        color: #999;
-        text-decoration: none;
-        margin-bottom: 0.5rem;
-        transition: color 0.3s;
-      }
-
-      .footer-section a:hover {
-        color: #fff;
-      }
-
-      .footer-bottom {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding-top: 2rem;
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-        text-align: center;
-        color: #666;
-      }
-
-      @media (max-width: 768px) {
-        /* Existing mobile adjustments */
-        .hero h1 {
-          font-size: 1.5rem;
-        }
-        .hero p {
-          font-size: 1.1rem;
-        }
-        .hero-icon {
-          width: 80px;
-          height: 80px;
-        }
-        .section-content {
-          grid-template-columns: 1fr;
-        }
-        .navbar {
-          padding: 1rem;
-          flex-wrap: wrap;
-        }
-
-        /* Hide nav links and Discord button on small screens */
-        .nav-links,
-        .discord-btn {
-          display: none;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="stars-container" id="stars"></div>
@@ -555,7 +51,7 @@
         <li><a href="#features">Features</a></li>
         <li><a href="#faq">FAQ</a></li>
       </ul>
-      <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo" class="discord-btn">Join Discord</a>
+      <a href="https://discord.com/invite/bcrZQKxe" class="discord-btn">Join Discord</a>
     </nav>
 
     <section class="hero" id="home">
@@ -567,7 +63,7 @@
           and restores missing content.
         </p>
         <div class="hero-buttons">
-          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo" class="btn-primary">Download (Windows)</a>
+          <a href="https://github.com/Bedrock-Cosmos/Launcher/releases/" class="btn-primary">Download (Windows)</a>
           <a href="#features" class="btn-secondary">Learn More</a>
         </div>
         <div class="stats-container">
@@ -743,21 +239,21 @@
         <div class="footer-section">
           <h3>Socials</h3>
           <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo" target="_blank">Youtube</a>
-          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo" target="_blank">Discord</a>
+          <a href="https://discord.com/invite/bcrZQKxe" target="_blank">Discord</a>
         </div>
         <div class="footer-section">
           <h3>Resources</h3>
-          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo">Download</a>
-          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo">Github</a>
+          <a href="https://github.com/Bedrock-Cosmos/Launcher/releases/">Download</a>
+          <a href="https://github.com/Bedrock-Cosmos/Launcher">Github</a>
         </div>
         <div class="footer-section">
           <h3>Legal</h3>
-          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo#terms">Terms of Service</a>
-          <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo#privacy">Privacy Policy</a>
+          <a href="/terms-of-service.html">Terms of Service</a>
+          <a href="/privacy-policy.html">Privacy Policy</a>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>All Rights Reserved - Not affiliated with Mojang Studios or Microsoft</p>
+        <p>© Bedrock Cosmos - All Rights Reserved - Not affiliated with Mojang Studios or Microsoft</p>
       </div>
     </footer>
 
