--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://bedrock-cosmos.app/privacy-policy.html" />
     <meta name="theme-color" content="#010101" />
     <title>Privacy Policy - Bedrock Cosmos</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <style>
       .legal-container {
         max-width: 900px;
@@ -107,19 +107,14 @@
 
     <nav class="navbar">
       <div class="logo">
-        <img src="./icons/shootingstar.png" alt="Bedrock Cosmos" class="logo-icon" />
+        <img src="../icons/shootingstar.png" alt="Bedrock Cosmos" class="logo-icon" />
         Bedrock Cosmos
       </div>
-      <ul class="nav-links">
-        <li><a href="index.html#home">Home</a></li>
-        <li><a href="index.html#features">Features</a></li>
-        <li><a href="index.html#faq">FAQ</a></li>
-      </ul>
       <a href="https://discord.com/invite/bcrZQKxe" class="discord-btn">Join Discord</a>
     </nav>
 
     <div class="legal-container">
-      <a href="index.html" class="back-link">← Back to Home</a>
+      <a href="../" class="back-link">← Back to Home</a>
       
       <div class="legal-header">
         <h1>Privacy Policy</h1>
@@ -272,8 +267,8 @@
         </div>
         <div class="footer-section">
           <h3>Legal</h3>
-          <a href="/terms-of-service.html">Terms of Service</a>
-          <a href="/privacy-policy.html">Privacy Policy</a>
+          <a href="/terms-of-service">Terms of Service</a>
+          <a href="/privacy-policy">Privacy Policy</a>
         </div>
       </div>
       <div class="footer-bottom">
