--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
         </div>
         <div class="footer-section">
           <h3>Legal</h3>
-          <a href="/terms-of-service.html">Terms of Service</a>
-          <a href="/privacy-policy.html">Privacy Policy</a>
+          <a href="/terms-of-service">Terms of Service</a>
+          <a href="/privacy-policy">Privacy Policy</a>
         </div>
       </div>
       <div class="footer-bottom">
