--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -272,7 +272,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>© Bedrock Cosmos - All Rights Reserved - Not affiliated with Mojang Studios or Microsoft</p>
+        <p>Bedrock Cosmos © 2026 - All Rights Reserved - Not affiliated with Mojang Studios or Microsoft</p>
       </div>
     </footer>
 
