Added Changelog, needs linking and finishing

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             seamlessly adds tons of unique cape designs to your Minecraft Bedrock experience.
           </p>
           <p>
-            Browse through hundreds of community-created designs and equip your favorite cape to stand out in any server
+            Browse through hundreds of unique designs and equip your favorite cape to stand out in any server
             or world.
           </p>
         </div>
@@ -119,12 +119,10 @@
     <section class="section">
       <div class="section-content">
         <div>
-          <h2>Marketplace Unlocked</h2>
+          <h2>Marketplace Highlights</h2>
           <p>
-            Discover hidden gems in the Minecraft Marketplace. Bedrock Cosmos reveals hidden packs that are normally
-            inaccessible, giving you access to exclusive content.
-          </p>
-          <p>Access missing packs and experience content that was previously unavailable in your region or platform.</p>
+            Discover hidden gems in the Minecraft Marketplace. Bedrock Cosmos highlights packs that aren’t always visible,
+            helping you discover exclusive content that may not be prominently shown on your region or platform.</p>
         </div>
         <div class="section-image image-carousel" data-images='["./imgs/img_2.png"]'>
           <img src="./imgs/img_2.png" alt="Marketplace" class="carousel-img active" />
@@ -195,7 +193,7 @@
             <span class="faq-toggle">+</span>
           </div>
           <div class="faq-answer">
-            Bedrock Cosmos operates as a client-side proxy and does not modify game files or give unfair advantages.
+            No. Bedrock Cosmos operates as a client-side proxy and does not modify game files or give unfair advantages.
           </div>
         </div>
 
