--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#faq">FAQ</a></li>
+        <li><a href="/changelogs">Changelogs</a></li>
       </ul>
       <a href="https://discord.com/invite/bcrZQKxe" class="discord-btn">Join Discord</a>
     </nav>
