--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
         <img src="./icons/shootingstar.png" alt="Bedrock Cosmos" class="hero-icon" />
         <h1>Welcome To Bedrock Cosmos</h1>
         <p>
-          A custom-built proxy launcher for Minecraft Bedrock Edition that unlocks endless customization possibilities
-          and restores missing content.
+          A custom proxy for Minecraft Bedrock Edition that adds new ways to customize your
+          character and restores missing content.
         </p>
         <div class="hero-buttons">
           <a href="https://github.com/Bedrock-Cosmos/Launcher/releases/" class="btn-primary">Download (Windows)</a>
           <a href="#features" class="btn-secondary">Learn More</a>
         </div>
         <div class="stats-container">
-          <div class="stat-item"><span class="stat-number" id="userCount">Loading...</span> Current Users!</div>
+          <div class="stat-item"><span class="stat-number" id="userCount">Loading...</span> Active Users!</div>
         </div>
       </div>
     </section>
