--- a/index.html
+++ b/index.html
@@ -78,22 +78,22 @@
         <div class="feature-card">
           <img src="./icons/folder.png" alt="Folder" class="feature-icon" />
           <h3>Open Source</h3>
-          <p>The Launcher is open source and available on Github</p>
+          <p>The Launcher is open source and available on GitHub</p>
         </div>
         <div class="feature-card">
           <img src="./icons/like.png" alt="Like" class="feature-icon" />
           <h3>Easy To Use</h3>
-          <p>Install it in seconds and turn it on!</p>
+          <p>Simple installation process that takes seconds</p>
         </div>
         <div class="feature-card">
           <img src="./icons/link.png" alt="Link" class="feature-icon" />
           <h3>Compatible</h3>
-          <p>Works with any bedrock client installed</p>
+          <p>Works with any other Minecraft Bedrock Edition client installed</p>
         </div>
         <div class="feature-card">
           <img src="./icons/resize.png" alt="Resize" class="feature-icon" />
           <h3>Lightweight</h3>
-          <p>Runs in the background using very little resources</p>
+          <p>Runs in the background, using very few resources</p>
         </div>
       </div>
     </section>
