--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="feature-card">
           <img src="./icons/link.png" alt="Link" class="feature-icon" />
           <h3>Compatible</h3>
-          <p>Works with any other Minecraft Bedrock Edition client installed</p>
+          <p>Works with other Minecraft Bedrock Edition clients</p>
         </div>
         <div class="feature-card">
           <img src="./icons/resize.png" alt="Resize" class="feature-icon" />
