Remove SuperMeatBoy.png and update Discord links
Delete unused SuperMeatBoy.png and replace the old Discord invite ID (bcrZQKxe) with the new invite (veHaxsfSyb) across site pages (index, changelogs, privacy-policy, terms-of-service). In index.html, add IDs to the nav/footer Discord buttons and introduce JS to set Discord links dynamically from the Discord guild widget with a DISCORD_FALLBACK_INVITE used on error; also ensure userCount is populated. Minor EOF newline adjustment in index.html.

--- a/changelogs/index.html
+++ b/changelogs/index.html
@@ -188,7 +188,7 @@
         <li><a href="../#features">Features</a></li>
         <li><a href="../#faq">FAQ</a></li>
       </ul>
-      <a href="https://discord.com/invite/bcrZQKxe" class="discord-btn">Join Discord</a>
+      <a href="https://discord.com/invite/veHaxsfSyb" class="discord-btn">Join Discord</a>
     </nav>
 
     <div class="changelog-container">
@@ -300,7 +300,7 @@
         <div class="footer-section">
           <h3>Socials</h3>
           <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo" target="_blank">Youtube</a>
-          <a href="https://discord.com/invite/bcrZQKxe" target="_blank">Discord</a>
+          <a href="https://discord.com/invite/veHaxsfSyb" target="_blank">Discord</a>
         </div>
         <div class="footer-section">
           <h3>Resources</h3>
