--- a/terms-of-service/index.html
+++ b/terms-of-service/index.html
@@ -110,7 +110,7 @@
         <img src="../icons/shootingstar.png" alt="Bedrock Cosmos" class="logo-icon" />
         Bedrock Cosmos
       </div>
-      <a href="https://discord.com/invite/bcrZQKxe" class="discord-btn">Join Discord</a>
+      <a href="https://discord.com/invite/veHaxsfSyb" class="discord-btn">Join Discord</a>
     </nav>
 
     <div class="legal-container">
@@ -297,7 +297,7 @@
         <div class="footer-section">
           <h3>Socials</h3>
           <a href="https://www.youtube.com/watch?v=RCSnBT2YOEo" target="_blank">Youtube</a>
-          <a href="https://discord.com/invite/bcrZQKxe" target="_blank">Discord</a>
+          <a href="https://discord.com/invite/veHaxsfSyb" target="_blank">Discord</a>
         </div>
         <div class="footer-section">
           <h3>Resources</h3>
