--- a/id/22688cde-3822-4bd8-9638-625713ba4dfd/index.html
+++ b/id/22688cde-3822-4bd8-9638-625713ba4dfd/index.html
@@ -4,12 +4,12 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Cookies Skin Pack - Bedrock Cosmos" />
+    <meta property="og:title" content="Matching Cosmetics 1" />
+    <meta property="og:description" content="Express yourself in-game with a friend or partner using the 30 skins in this pack! By Exports" />
+    <meta property="og:url" content="https://bedrock-cosmos.app/id/22688cde-3822-4bd8-9638-625713ba4dfd/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Bedrock-Cosmos/Backend/main/Main/Thumbnails/Marketplace/Skin%20Packs/Creator%20Hub/Exports/Exports%20Matching%20Cosmetics%201/ExportsMatchingCosmetics1_thumbnail.jpg" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Cookies Skin Pack - Bedrock Cosmos" />
-    <meta property="og:url" content="https://bedrock-cosmos.app/packs/cookies" />
-    <meta name="theme-color" content="#010101" />
-    <title>Cookies Skin Pack - Bedrock Cosmos</title>
+    <meta name="theme-color" content="#020202" />
     <link rel="stylesheet" href="../../css/style.css" />
   </head>
   <body>
